data/derived/comb/progs/unify/prog6392.ml.out
Characters 83-91:
  | false ->if n / 10 = 0 then n mod 10 else digitsOfInt (n/10) :: n mod 10;;
                               ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
